--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style/min/style.min.css">
 </head>
 <body>
-    <p class="size-1 weight-normal">This is a text.</p>
+    <div class="flex flex-column">
+        <p class="size-1 weight-normal">This is a text.</p>
+        <p class="size-1 weight-normal">This is a text.</p>
+    </div>
 </body>
 </html>
