--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style/min/style.min.css">
 </head>
 <body>
-    <div class="flex flex-column">
-        <p class="size-1 weight-normal">This is a text.</p>
-        <p class="size-1 weight-normal">This is a text.</p>
+    <div class="flex width-full height-full bg-color-primary">
+        <p class="size-1 color-white">Loprem Ipsum</p>
     </div>
+    <form method="post" class="margin-1">
+        <input type="text" placeholder="Name" class="margin-bottom-1"><br>
+        <input type="password" placeholder="Password" class="margin--bottom-1">
+    </form>
 </body>
 </html>
