--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style/min/style.min.css">
 </head>
 <body>
-    <div class="flex width-full height-full bg-color-primary">
-        <p class="size-1 color-white">Loprem Ipsum</p>
+    <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
+        <form method="post" class="margin-1 width-7">
+            <input type="text" placeholder="Name" class="input margin-bottom-1"><br>
+            <input type="password" placeholder="Password" class="input margin-bottom-1"><br>
+            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message" class="textarea margin-bottom-1"></textarea>
+            <button class="button">Login</button>
+        </form>
     </div>
-    <form method="post" class="margin-1">
-        <input type="text" placeholder="Name" class="margin-bottom-1"><br>
-        <input type="password" placeholder="Password" class="margin--bottom-1">
-    </form>
 </body>
 </html>
