--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
         <form method="post" class="margin-1 width-7">
-            <input type="text" placeholder="Name" class="input margin-bottom-1"><br>
-            <input type="password" placeholder="Password" class="input margin-bottom-1"><br>
-            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message" class="textarea margin-bottom-1"></textarea>
-            <button class="button">Login</button>
+            <input type="text" placeholder="Input" class="input margin-bottom-1">
+            <textarea placeholder="Textarea" class="textarea margin-bottom-1"></textarea>
+            <button class="button height">Button</button>
         </form>
     </div>
 </body>
