--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Framework</title>
     <link rel="stylesheet" href="style/min/style.min.css">
+    <script src="https://kit.fontawesome.com/a0a804109e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
