--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
         <form method="post" class="margin-1 width-7">
             <input type="text" placeholder="Input" class="input margin-bottom-1">
-            <textarea placeholder="Textarea" class="textarea margin-bottom-1"></textarea>
+            <textarea placeholder="Textarea" class="textarea margin-bottom-1 resize-none"></textarea>
             <button class="button height">Button</button>
         </form>
     </div>
