--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
         <form method="post" class="margin-1 width-7">
-            <input type="text" placeholder="Input" class="input margin-bottom-1">
-            <textarea placeholder="Textarea" class="textarea margin-bottom-1 resize-none"></textarea>
-            <button class="button height">Button</button>
+            <input type="text" placeholder="Medium Input" class="input margin-bottom-1">
+            <textarea placeholder="Medium Textarea" class="textarea margin-bottom-1 resize-none"></textarea>
+            <button class="button medium margin-bottom-1">Medium Button</button>
         </form>
     </div>
 </body>
