--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
+        <h1 class="size-2 weight-semi-bold">Text</h1>
         <form method="post" class="margin-1 width-7">
             <input type="text" placeholder="Medium Input" class="input margin-bottom-1">
-            <textarea placeholder="Medium Textarea" class="textarea margin-bottom-1 resize-none"></textarea>
+            <textarea placeholder="Medium Textarea" class="textarea margin-bottom-1 resize-vertical"></textarea>
             <button class="button medium margin-bottom-1">Medium Button</button>
         </form>
     </div>
