Big Changes + Z-Index
+ Shorter class names
+ New Font (Arial, Helvetica)
+ Z-Index

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <script src="https://kit.fontawesome.com/a0a804109e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container flex flex-justify-center flex-align-center flex-column width-full height-full">
-        <h1 class="size-2 weight-semi-bold">Text</h1>
-        <form method="post" class="margin-1 width-7">
-            <input type="text" placeholder="Medium Input" class="input margin-bottom-1">
-            <textarea placeholder="Medium Textarea" class="textarea margin-bottom-1 resize-vertical"></textarea>
-            <button class="button medium margin-bottom-1">Medium Button</button>
+    <div class="container flex flex-justify-center flex-align-center flex-column w-full h-full">
+        <h1 class="size-2 w-semi-bold">Text</h1>
+        <div class="box bg-color-white-ter m-1 h-1 w-7 border-radius-1 align-center flex flex-align-center flex-justify-center">
+            <p>This text is in <strong>bold</strong>.</p>
+        </div>
+        <form method="post" class="m-1 w-7">
+            <input type="text" placeholder="Normal Input" class="input mb-1">
+            <textarea placeholder="Normal Textarea" class="textarea mb-1 resize-vertical"></textarea>
+            <button class="button mb-1">Normal Button</button>
         </form>
     </div>
 </body>
