--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container flex flex-justify-center flex-align-center flex-column w-full h-full">
         <h1 class="size-2 w-semi-bold">Text</h1>
-        <div class="box bg-color-white-ter m-1 h-1 w-7 border-radius-1 align-center flex flex-align-center flex-justify-center">
+        <div class="container bg-color-white-ter m-1 h-1 w-7 border-radius-1 align-center flex flex-align-center flex-justify-center">
             <p>This text is in <strong>bold</strong>.</p>
         </div>
         <form method="post" class="m-1 w-7">
