Article and Badges
+ Article
+ Badges

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 class="size-2 w-semi-bold">Text</h1>
         <div class="container bg-color-white-ter m-1 h-1 w-7 border-radius-1 align-center flex flex-align-center flex-justify-center">
             <p>This text is in <strong>bold</strong>.</p>
+            <span class="badge info">NEW</span>
         </div>
         <form method="post" class="m-1 w-7">
             <input type="text" placeholder="Normal Input" class="input mb-1">
