--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <textarea placeholder="Normal Textarea" class="textarea mb-1 resize-vertical"></textarea>
             <button class="button mb-1">Normal Button</button>
         </form>
+        <div class="progress w-6"><div class="bar danger" style="width: 40%;"></div></div>
     </div>
 </body>
 </html>
