--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <section class="section full" id="table">
         <div class="container flex flex-justify-center flex-align-center flex-column">
-            <h1 class="size-2 w-semi-bold">Table</h1>
+            <h1 class="size-2 w-semi-bold pt-1">Table</h1>
             <p class="size-4 pb-1">I hope, this looks clean.</p>
             <table class="table w-3-quarter">
                 <tr>
@@ -86,21 +86,6 @@
                     <td>Laughing Bacchus Winecellars</td>
                     <td>Yoshi Tannamuri</td>
                     <td>Canada</td>
-                </tr>
-                <tr>
-                    <td>Magazzini Alimentari Riuniti</td>
-                    <td>Giovanni Rovelli</td>
-                    <td>Italy</td>
-                </tr>
-                <tr>
-                    <td>North/South</td>
-                    <td>Simon Crowther</td>
-                    <td>UK</td>
-                </tr>
-                <tr>
-                    <td>Paris spécialités</td>
-                    <td>Marie Bertrand</td>
-                    <td>France</td>
                 </tr>
             </table>
         </div>
