--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </section>
     <footer class="bg-color-grey-dark p-3 flex flex-justify-center flex-align-center flex-column">
         <p class="color-white">Designed by <a href="https://github.com/teraprath" targGitHubet="_blank"
-                class="color-white w-semi-bold">@teraprath</a></p>
+                class="color-white w-semi-bold hover-underline">@teraprath</a></p>
         <p class="color-white">View this project on <a href="https://github.com/teraprath/css-framework" target="_blank"
-                class="color-white w-semi-bold">GitHub</a></p>
+                class="color-white w-semi-bold hover-underline">GitHub</a></p>
     </footer>
 </body>
 
