--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Framework</title>
     <link rel="stylesheet" href="style/min/style.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/a0a804109e.js" crossorigin="anonymous"></script>
 </head>
 
@@ -88,6 +89,28 @@
                     <td>Canada</td>
                 </tr>
             </table>
+        </div>
+    </section>
+    <section class="section full">
+        <div class="article p-9">
+            <h1>This is an article.</h1>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <ul>
+                <li>At vero eos et accusam et justo duo dolores.</li>
+                <li>Duis autem vel eum iriure dolor.</li>
+                <li>Nam liber tempor cum soluta nobis.</li>
+            </ul>
+            <p>Stet clita kasd gubergren, no sea takimata <a href="#">sanctus</a> est Lorem ipsum dolor sit amet.</p>
+            <img src="http://placehold.it/1280x720" alt="image">
+            <p class="image">This is a picture.</p>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
+                dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         </div>
     </section>
     <footer class="bg-color-grey-dark p-3 flex flex-justify-center flex-align-center flex-column">
