--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <body>
     <header class="header">
-        <p class="logo">Framework</p>
+        <div class="logo">
+            <img src="assets/img/Logo.svg" alt="Logo">
+            <p>MeetCVO</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
