Responsive Header and Width
+ Responsive Header
+ Responsive Width

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#" class="button light">Login</a></li>
-                <li><a href="#" class="button">Register</a></li>
+                <li><a href="#" class="button light">Einloggen</a></li>
+                <li><a href="#" class="button"><i class="fas fa-sign-in-alt"></i> Registrieren</a></li>
             </ul>
         </nav>
+        <a class="menu">
+            <i class="fas fa-bars"></i>
+        </a>
     </header>
     <section class="section full">
         <div class="container h-full flex flex-justify-center flex-align-center flex-column">
