--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#" class="button light">Einloggen</a></li>
-                <li><a href="#" class="button"><i class="fas fa-sign-in-alt"></i> Registrieren</a></li>
+                <li><a href="login.html" class="button light">Einloggen</a></li>
+                <li><a href="register.html" class="button"><i class="fas fa-sign-in-alt"></i> Registrieren</a></li>
             </ul>
         </nav>
-        <a class="menu">
-            <i class="fas fa-bars"></i>
-        </a>
+        <a class="mobile"><i class="fas fa-sign-in-alt"></i></a>
+        <div class="mobile-menu">
+            <ul>
+                <li><a href="#">Einloggen</a></li>
+                <li><a href="#">Registrieren</a></li>
+            </ul>
+        </div>
     </header>
     <section class="section full">
         <div class="container h-full flex flex-justify-center flex-align-center flex-column">
@@ -41,6 +45,8 @@
     <footer class="bg-color-primary pb-4 flex flex-justify-center flex-align-center flex-column">
         <p class="color-white w-semi-bold">MeetCVO &copy; 2021-2023</p>
     </footer>
+
+    <script src="js/framework.js"></script>
 </body>
 
 </html>
